新增：添加图片资源文件夹

--- a/系统分析总结.md
+++ b/系统分析总结.md
@@ -1,12 +1,13 @@
 # 手机状态监控系统分析总结
 
 # 本项目完全ai生成 具体有多屎山我也不知道  本人一点代码不会写 启发是另外一个项目 (https://github.com/1812z/RunTime_Tracker)这个的 sleep
-本项目前bug有 具体有多屎山我也不知道
+本项目前bug有 【具体有多屎山我也不知道】
 1.手机ui显示问题修起来应该很简单
-2.网络状态:wifi显示异常应该也很好休息
+2.网络状态:wifi显示异常应该也很好修
 3.看不到的大大小小报错
 5.按下b键的二级菜单也有问题
 6.动态视频背景声音调整也有问题
+7.在线观看人数也有问题，每次刷新就会凭空增加一个人
 
 
 
